--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,22 @@
 
+body {
+    background: black;
+    margin-top: 300px;
+}
+
+.bigCounter {
+    text-align: center;
+    background:#313030;
+}
+
+.bigCounter div {
+    display: inline-block;
+    font-size: 120px;
+    line-height: 140px;
+    height: 180px;
+    color: rgb(183, 225, 45);
+    padding: 10px;
+}
 /* 
 
     You can write your own styles here...
